add new index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <h2 class="score-board">Attempts left: <span id="attempts-left">0</span></h2>
         </div>  
     </header>
+    <hr>
 </section>
+
 <section class="game-container">
     <div class="game-board">
         <div class="backcard" id="backcard1">
@@ -45,6 +47,10 @@
         <button class="buttonstyle" id="restart-button">Start Over!</button>
     </div>
 </section>
+
+<footer>
+    <p> &copy 2026 Programming For Web Applications - Full Sail University</p>
+</footer>
 
 <script src="dist/index.js"></script>
 </body>
